--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fleschkincaid</groupId>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>kenny.nlp</groupId>
     <artifactId>fleschkincaid</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+    <packaging>jar</packaging>
+
+    <name>Flesch Kincaid - Readability Classifier</name>
+    <description>This is a simple implementation of the Flesch-Kincaid readability tests in Java. From Wikipedia, The Flesch/Flesch–Kincaid readability tests are readability tests designed to indicate comprehension difficulty when reading a passage of contemporary academic English.</description>
+    <url>http://kennycason.com/posts/2014-05-20-fleschkincaid.html</url>
+
+    <developers>
+        <developer>
+            <name>Kenny Cason</name>
+            <email>kenneth.cason@gmail.com</email>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>http://svn.apache.org/viewcvs.cgi/maven</url>
+        <connection>http://svn.apache.org/viewcvs.cgi/maven</connection>
+    </scm>
 
     <dependencies>
         <dependency>
@@ -14,6 +39,34 @@
             <artifactId>stanford-corenlp</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <distributionManagement>
+        <repository>
+            <id>hosted-3rd-party-repository</id>
+            <name>hosted-3rd-party-repository</name>
+            <url>http://whirlpool.ttagg.com:8081/nexus/content/repositories/hosted-3rd-party-repository/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
